@@ -176,8 +176,6 @@ public final class ScriptRunnable extends AbstractScriptRunnable implements ITes
         final List<String> cmd = new ArrayList<>();
 
         cmd.add(System.getProperty("java.home") + separator + "bin" + separator + "java");
-        // cmd.add("-Djava.ext.dirs=dist");
-        cmd.add("-Xbootclasspath/a:dist/nashorn.jar");
         for (final String str : forkJVMOptions) {
             if(!str.isEmpty()) {
                 cmd.add(str);
